assets/css/theme.css
/* ... */
#delivery-addresses .address-item .radio-block .address {
  padding-left: 20px;
  font-size: 0.8em;
  color: var(--grey);
  margin-top: 10px;
}
#delivery-addresses .address-item .address-footer {
  border-top: 1px solid var(--stroke_color);
  padding-top: 20px;
  margin-top: 20px;
  display: flex;
  align-items: center;
  justify-content: end;
  gap: 15px;
  font-size: 0.8em;
}
.add-address, .billing-different {
  border: 1px solid var(--accent_color);
  display: inline-block;
  padding: 5px 20px;
  border-radius: 5px;
  font-size: 0.9em;
  color: var(--accent_color);
  margin-bottom: 0px;
}
.add-address a, .billing-different a {
  color: var(--accent_color);
  display: flex;
  gap: 10px;
  align-items: center;
}
.order-options #delivery label[for=delivery_message] {
  color: var(--grey);
  font-size: 0.9em;
}
.order-options #delivery textarea {
  width: 100%;
  box-sizing: border-box;
  border: 1px solid var(--stroke_color);
  border-radius: 5px;
  height: 80px;
  margin-top: 15px;
}
.payment-options-container {
  display: flex;
  gap: 20px;
  align-items: start;
  margin-top: 20px;
  flex-wrap: wrap;
}
.payment-option-item {
  display: block;
  border: 2px solid var(--stroke_color);
  border-radius: 8px;
  position: relative;
  padding: 20px 30px;
  box-sizing: border-box;
  font-size: 0.9em;
  min-width: 200px;
}
.payment-option-item:before {
  content: "\2713";
  position: absolute;
  width: 15px;
  height: 15px;
  background-color: var(--stroke_color);
  color: #fff;
  border-radius: 50%;
  top: 10px;
  right: 10px;
  text-align: center;
  font-size: 0.8em;
}
.payment-option-item.selected {
  border-color: var(--accent_color);
}
.payment-option-item.selected:before {
  background-color: var(--accent_color);
}
.payment-option-item input[type=radio] {
  display: none !important;
}
/* ========================== End of Checkout Page ========================== */

/* ========================== Category / Listing Page ========================== */
.box-category-details {
  display: flex;
  gap: 40px;
}
.box-category-details .category-cover {
  width: 200px;
  height: auto;
}
.box-category-details .category-cover img {
  width: 100%;
  height: auto;
}
.cat-description {
  font-size: 0.9em;
  margin-bottom: 30px;
  margin: 30px 0;
}
#subcategories {
  margin: 30px 0;
}
#subcategories .subcategories-list {
  margin: 0px;
  padding: 0px;
  list-style: none;
  display: flex;
  gap: 20px;
}
#subcategories .subcategories-list.names-only {
  flex-wrap: wrap;
}
#subcategories .subcategories-list li {
  max-width: 500px;
  flex: 1;
  background-color: #fff;
  border-radius: 12px;
  display: flex;
  padding: 20px;
  box-sizing: border-box;
  gap: 15px;
  position: relative;
  overflow: hidden;
  align-items: center;
}
#subcategories .subcategories-list.names-only li {
  max-width: auto;
  flex: none;
}
#subcategories .subcategories-list li:before {
  content: '';
  position: absolute;
  width: 300px;
  height: 300px;
  background-color: #eeeeee;
  border-radius: 50%;
  right: -99px;
  bottom: -125px;
}
#subcategories .subcategories-list.names-only li:before {
  content: none;
}
#subcategories .subcategories-list li .subcategory-image .img {
  display: flex;
  align-items: center;
  justify-content: center;
}
#subcategories .subcategories-list.names-only li .subcategory-image {
  display: none;
}
#subcategories .subcategories-list li .subcategory-image {
  z-index: 99;
}
#subcategories .subcategories-list li .subcat-details {
  z-index: 99;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 20px;
}
#subcategories .subcategories-list li .subcat-details h5 {
  margin: 0;
  font-size: 1.1em;
  font-weight: 500;
}
#subcategories .subcategories-list li .subcat-details .cat_desc {
  font-size: 0.9em;
}
#subcategories .subcategories-list.names-only li .subcat-details .cat_desc {
  display: none;
}
#subcategories .subcategories-list li .subcat-details .cat_desc p {
  margin: 0px;
  text-align: center;
}
.first-top {
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.first-top .total-products {
  font-size: 1em;
  color: var(--grey);
}
.sort-by-row {
  display: flex;
  gap: 20px;
  align-items: center;
}
.sort-by-row .sort-by {
  font-size: 1em;
  color: var(--grey);
}
.dropdown {
  position: relative;
}
.dropdown .select-title {
  height: 40px;
  width: 200px;
  border: 1px solid var(--stroke_color);
  border-radius: 5px;
  background-color: #fff;
  color: var(--grey);
  font-weight: 600;
  outline: none;
}
.dropdown .select-title .material-icons {
  display: none;
}
.dropdown .dropdown-menu {
  display: none;
  position: absolute;
}
.dropdown.open .dropdown-menu {
  display: flex;
  flex-direction: column;
  background: #fff;
  width: 250px;
  right: 0px;
  top: 50px;
  border-radius: 12px;
  z-index: 999;
  box-shadow: 0px 9px 22px -10px #232323;
}
.dropdown.open .dropdown-menu a {
  display: block;
  padding: 10px 20px;
  box-sizing: border-box;
  border-bottom: 1px solid var(--stroke_color);
  font-size: 0.8em;
}
.dropdown.open .dropdown-menu a:hover {
  background-color: var(--stroke_color);
}
.dropdown.open .dropdown-menu a:last-child {
  border:none
}
.active_filters {
  margin-bottom: 30px;
}
.active_filters .active-filter-title {
  display: none;
}
.active_filters ul {
  list-style: none;
  display: flex;
  padding: 0px;
  gap: 15px;
}
.active_filters ul li {
  background-color: var(--link_color);
  font-size: 0.8em;
  color: #fff;
  padding: 8px 10px;
  border-radius: 10px;
}
.active_filters ul li a {
  color: #fff;
}
.pagination {
  display: flex;
  align-items: center;
  justify-content: space-between;
}
.pagination .summary {
  font-size: 0.8em;
}
.pagination .page-list {
  display: flex;
  margin: 0px;
  padding: 0px;
  list-style: none;
  gap: 20px;
  align-items: center;
}
.pagination .page-list .previous, .pagination .page-list .next {
  display: flex;
  gap: 15px;
}
/* ... */

